--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "angular-in-memory-web-api": "^0.13.0",
     "bootstrap": "^4.6.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
